css flickering fixed by adding inline margin auto

--- a/src/components/BrowseByActor/BrowseByActor.scss
+++ b/src/components/BrowseByActor/BrowseByActor.scss
@@ -18,7 +18,8 @@
     list-style: none;
     display: flex;
     width: fit-content;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
+    margin-inline: auto;
     border: 1px solid #dc442d;
     border-radius: 8px;
     overflow: hidden;
